News UAT/force-app/main/default/objects/Industry_Code__c/Industry_Code__c.object-meta.xml
<CustomObject>
    <description>ANZSIC 2006 Industry Codes.

4 levels (Division, Subdivision, Group, Class)</description>
    <label>Industry Code</label>
    <nameField>
        <label>Industry</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industry Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>