News UAT/force-app/main/default/objects/Industry_Code__c/fields/Class_Code_s__c.field-meta.xml
<CustomField>
    <fullName>Class_Code_s__c</fullName>
    <label>Class Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>