News UAT/force-app/main/default/objects/Industry_Code__c/fields/Division_Code__c.field-meta.xml
<CustomField>
    <fullName>Division_Code__c</fullName>
    <label>Division Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>