News UAT/force-app/main/default/objects/Industry_Code__c/fields/Group_Code_s__c.field-meta.xml
<CustomField>
    <fullName>Group_Code_s__c</fullName>
    <label>Group Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>