News UAT/force-app/main/default/objects/Industry_Code__c/fields/Industry_Code_Adpoint__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code_Adpoint__c</fullName>
    <label>Industry Code (Adpoint)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>