News UAT/force-app/main/default/objects/Industry_Code__c/fields/MI_Class_Adpoint__c.field-meta.xml
<CustomField>
    <fullName>MI_Class_Adpoint__c</fullName>
    <label>MI Class (Adpoint)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>