News UAT/force-app/main/default/objects/Industry_Code__c/fields/Subdivision_Code_s__c.field-meta.xml
<CustomField>
    <fullName>Subdivision_Code_s__c</fullName>
    <label>Subdivision Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>