News UAT/force-app/main/default/objects/Industry_Code__c/listViews/Adpoint_Segment.listView-meta.xml
<ListView>
    <fullName>Adpoint_Segment</fullName>
    <columns>NAME</columns>
    <columns>Industry_Code_Adpoint__c</columns>
    <columns>MI_Class_Adpoint__c</columns>
    <filterScope>Everything</filterScope>
    <label>Adpoint Segment</label>
</ListView>