News UAT/force-app/main/default/objects/Industry_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Division_Code__c</columns>
    <columns>Division__c</columns>
    <columns>Class__c</columns>
    <columns>Subdivision__c</columns>
    <columns>Group__c</columns>
    <columns>External_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>