News UAT/force-app/main/default/objects/Industry_Code__c/listViews/Industry_List.listView-meta.xml
<ListView>
    <fullName>Industry_List</fullName>
    <columns>NAME</columns>
    <columns>Group__c</columns>
    <columns>Division__c</columns>
    <columns>Subdivision__c</columns>
    <columns>Class__c</columns>
    <filterScope>Everything</filterScope>
    <label>Industry List</label>
</ListView>